--- a/index.html
+++ b/index.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My Personal Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <style>
+        body { font-family: sans-serif; line-height: 1.6; margin: 0; padding: 0; background: #f4f4f4; }
+        header { background: #333; color: #fff; padding: 1rem; text-align: center; }
+        nav { display: flex; justify-content: center; background: #444; padding: 0.5rem; }
+        nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
+        .container { max-width: 800px; margin: 20px auto; padding: 20px; background: #fff; border-radius: 8px; }
+        .project-card { border-bottom: 1px solid #ddd; padding: 10px 0; }
+        footer { text-align: center; padding: 20px; color: #777; font-size: 0.8rem; }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Website!</h1>
-    <p>I just built this on GitHub Pages.</p>
+    <header>
+        <h1>Your Name</h1>
+        <p>Future Web Developer | Student | Creator</p>
+    </header>
+    
+    <nav>
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+        <a href="mailto:your-email@example.com">Contact</a>
+    </nav>
+
+    <div class="container">
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Write a short bio here. Mention what you're learning and what you love to build!</p>
+        </section>
+
+        <section id="projects">
+            <h2>My Projects</h2>
+            <div class="project-card">
+                <h3>Project 1: Personal Website</h3>
+                <p>This very site you're looking at! Built with HTML and CSS and hosted on GitHub Pages.</p>
+            </div>
+        </section>
+    </div>
+
+    <footer>
+        <p>&copy; 2026 Your Name. Built with GitHub Pages.</p>
+    </footer>
 </body>
 </html>
