--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Asif Shaikh</title>
     <style>
         body { font-family: sans-serif; line-height: 1.6; margin: 0; padding: 0; background: #f4f4f4; }
         header { background: #333; color: #fff; padding: 1rem; text-align: center; }
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
+        <h1>Asif Shaikh</h1>
         <p>Future Web Developer | Student | Creator</p>
     </header>
     
