--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <header>
         <h1>Asif Shaikh <span class="marathi-name">(आसिफ शेख)</span></h1>
-        <p class="subtitle">Mathematician | Group Theory Researcher</p>
+        <p class="subtitle">Mathematician</p>
     </header>
 
     <main class="bio-section">
@@ -101,11 +101,10 @@
         </p>
 
         <p>
-            I earned my Ph.D. from <strong>Savitribai Phule Pune University</strong> under the mentorship of Professor Hemant Bhate, 
-            where I explored the Galois coverings of Schreier graphs of self-similar groups. Following my doctoral work, 
-            I was honored to be a <strong>Fulbright-Nehru Postdoc Fellow at Texas A&M University</strong>. During this time, 
-            my research expanded into the cogrowth of finitely generated subgroups and their behavior under the action of 
-            Whitehead automorphisms.
+            I earned my Ph.D. from <strong>Savitribai Phule Pune University</strong> under the mentorships of Professor Hemant Bhate and Professor Dilip Sheth, 
+            where I explored the Galois coverings of Schreier graphs of self-similar groups. Following my doctoral work, I was honored to be a <strong>Fulbright-Nehru 
+            Postdoc Fellow</strong> at <strong>Texas A&M University</strong>, where I worked with Professor Rostislav Grigorchuk. During this time, my research expanded
+            into the cogrowth of finitely generated subgroups of a free group and their multivariate analogs.
         </p>
 
         <p>
@@ -118,7 +117,7 @@
             <h3>Current Chapter</h3>
             <p>
                 I have recently relocated to <strong>Frankfurt am Main, Germany</strong>. I am currently seeking new 
-                academic and research opportunities within the German mathematical community, where I can contribute 
+                academic and research opportunities within the European mathematical community, where I can contribute 
                 my expertise in group theory, teaching, and interdisciplinary modeling.
             </p>
         </div>
