--- a/index.html
+++ b/index.html
@@ -89,10 +89,54 @@
 </head>
 <body>
 
-    <header>
-        <h1>Asif Shaikh <span class="marathi-name">(आसिफ शेख)</span></h1>
-        <p class="subtitle">Mathematician</p>
-    </header>
+    <style>
+    header {
+        background-color: #2c3e50; /* Professional Navy Blue */
+        color: #ffffff;
+        padding: 60px 20px;
+        text-align: center;
+        border-bottom: 4px solid #3498db; /* A thin light-blue accent */
+    }
+
+    .profile-img {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%; /* Makes the image a circle */
+        border: 4px solid #ffffff;
+        margin-bottom: 20px;
+        object-fit: cover; /* Ensures the image doesn't stretch */
+        box-shadow: 0px 4px 15px rgba(0,0,0,0.3);
+    }
+
+    header h1 {
+        margin: 10px 0;
+        font-size: 2.5rem;
+        color: #ffffff;
+    }
+
+    .marathi-name {
+        font-weight: normal;
+        color: #bdc3c7; /* Light grey for the script */
+        font-size: 1.8rem;
+        display: block; /* Puts the Marathi name on a new line for better balance */
+    }
+
+    .subtitle {
+        font-size: 1.1rem;
+        letter-spacing: 3px;
+        text-transform: uppercase;
+        color: #3498db; /* Light blue subtitle */
+        margin-top: 10px;
+        font-weight: bold;
+    }
+</style>
+
+<header>
+    <img src="profile.jpg" alt="Asif Shaikh" class="profile-img">
+    
+    <h1>Asif Shaikh <span class="marathi-name">(आसिफ शेख)</span></h1>
+    <p class="subtitle">Mathematician</p>
+</header>
 
     <main class="bio-section">
         <p>
