--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 </style>
 
 <header>
-    <img src="profile.jpg" alt="Asif Shaikh" class="profile-img">
+    <img src="profile.png" alt="Asif Shaikh" class="profile-img">
     
     <h1>Asif Shaikh <span class="marathi-name">(आसिफ शेख)</span></h1>
     <p class="subtitle">Mathematician</p>
