--- a/index.html
+++ b/index.html
@@ -89,53 +89,87 @@
 </head>
 <body>
 
-    <style>
+   <style>
     header {
-        background-color: #2c3e50; /* Professional Navy Blue */
+        background-color: #34495e; /* Elegant Slate Blue/Grey */
         color: #ffffff;
-        padding: 60px 20px;
-        text-align: center;
-        border-bottom: 4px solid #3498db; /* A thin light-blue accent */
+        padding: 40px 10%; /* Shorter height, more side padding */
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 20px;
     }
 
-    .profile-img {
-        width: 150px;
-        height: 150px;
-        border-radius: 50%; /* Makes the image a circle */
-        border: 4px solid #ffffff;
-        margin-bottom: 20px;
-        object-fit: cover; /* Ensures the image doesn't stretch */
-        box-shadow: 0px 4px 15px rgba(0,0,0,0.3);
+    .header-text {
+        flex: 1;
+        text-align: left;
     }
 
-    header h1 {
-        margin: 10px 0;
-        font-size: 2.5rem;
-        color: #ffffff;
+    .header-text h1 {
+        margin: 0;
+        font-size: 2.8rem;
+        line-height: 1.2;
     }
 
-    .marathi-name {
+    .header-text .marathi-name {
         font-weight: normal;
-        color: #bdc3c7; /* Light grey for the script */
-        font-size: 1.8rem;
-        display: block; /* Puts the Marathi name on a new line for better balance */
+        color: #bdc3c7;
+        font-size: 1.5rem;
+        display: block;
+        margin-top: 5px;
     }
 
-    .subtitle {
-        font-size: 1.1rem;
-        letter-spacing: 3px;
+    .header-text .subtitle {
+        font-size: 1.2rem;
+        letter-spacing: 4px;
         text-transform: uppercase;
-        color: #3498db; /* Light blue subtitle */
-        margin-top: 10px;
+        color: #3498db; /* Sky Blue accent */
+        margin-top: 15px;
         font-weight: bold;
+        display: block;
+    }
+
+    .header-photo-container {
+        flex: 1;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .landscape-photo {
+        width: 100%;
+        max-width: 450px; /* Limits size on large screens */
+        height: auto;
+        border-radius: 8px; /* Slightly rounded corners for a modern look */
+        border: 3px solid rgba(255, 255, 255, 0.2);
+        box-shadow: 0px 10px 30px rgba(0,0,0,0.3);
+    }
+
+    /* Mobile Responsive: Stacks the columns on small screens */
+    @media (max-width: 768px) {
+        header {
+            flex-direction: column;
+            text-align: center;
+            padding: 30px 20px;
+        }
+        .header-text {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .header-photo-container {
+            justify-content: center;
+        }
     }
 </style>
 
 <header>
-    <img src="profile.png" alt="Asif Shaikh" class="profile-img">
-    
-    <h1>Asif Shaikh <span class="marathi-name">(आसिफ शेख)</span></h1>
-    <p class="subtitle">Mathematician</p>
+    <div class="header-text">
+        <h1>Asif Shaikh <span class="marathi-name">(आसिफ शेख)</span></h1>
+        <span class="subtitle">Mathematician</span>
+    </div>
+
+    <div class="header-photo-container">
+        <img src="profile.png" alt="Asif Shaikh by the river" class="landscape-photo">
+    </div>
 </header>
 
     <main class="bio-section">
