--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
    <style>
     header {
-        background-color: #51697f; /* Elegant Slate Blue/Grey */
+        background-color: #dde0eb; /* Elegant Slate Blue/Grey */
         color: #ffffff;
         padding: 40px 10%; /* Shorter height, more side padding */
         display: flex;
@@ -113,7 +113,7 @@
 
     .header-text .marathi-name {
         font-weight: normal;
-        color: #c4cadb;
+        color: #465772;
         font-size: 1.5rem;
         display: block;
         margin-top: 5px;
@@ -123,7 +123,7 @@
         font-size: 1.2rem;
         letter-spacing: 4px;
         text-transform: uppercase;
-        color: #dde0eb; /* Sky Blue accent */
+        color: #465772; /* Sky Blue accent */
         margin-top: 15px;
         font-weight: bold;
         display: block;
