--- a/index.html
+++ b/index.html
@@ -159,6 +159,33 @@
             justify-content: center;
         }
     }
+       .main-nav {
+    display: flex;
+    justify-content: center;
+    background-color: #ffffff;
+    padding: 15px 0;
+    border-bottom: 1px solid #eee;
+    position: sticky; /* Keeps the menu at the top when you scroll */
+    top: 0;
+    z-index: 1000;
+}
+
+.nav-button {
+    margin: 0 15px;
+    padding: 10px 20px;
+    text-decoration: none;
+    color: #2c3e50;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 0.9rem;
+    border-radius: 4px;
+    transition: all 0.3s ease;
+}
+
+.nav-button:hover {
+    background-color: #3498db;
+    color: white;
+}
 </style>
 
 <header>
@@ -171,6 +198,12 @@
         <img src="profile.png" alt="Asif Shaikh by the river" class="landscape-photo">
     </div>
 </header>
+
+    <nav class="main-nav">
+    <a href="research.html" class="nav-button">Research</a>
+    <a href="publications.html" class="nav-button">Publications</a>
+    <a href="teaching.html" class="nav-button">Teaching</a>
+    </nav>
 
     <main class="bio-section">
         <p>
