--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             color: #333;
             max-width: 850px;
             margin: 0 auto;
-            padding: 40px 20px;
+            padding: 0;
             background-color: #fcfcfc;
         }
 
