--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
         header {
             border-bottom: 2px solid #2c3e50;
-            margin-bottom: 30px;
-            padding-bottom: 20px;
+            margin-bottom: 0;
+            padding-bottom: 0;
         }
 
         h1 {
