--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     display: flex;
     justify-content: center;
     background-color: #ffffff;
-    padding: 15px 0;
+    padding: 0;
     border-bottom: 1px solid #eee;
     position: sticky; /* Keeps the menu at the top when you scroll */
     top: 0;
