--- a/research.html
+++ b/research.html
@@ -34,7 +34,7 @@
             display: flex; 
             justify-content: center; 
             background-color: #ffffff; 
-            padding: 15px 0; 
+            padding:  0; 
             border-bottom: 1px solid #eee; 
             position: sticky; 
             top: 0; 
