--- a/publications.html
+++ b/publications.html
@@ -18,19 +18,15 @@
 
     <style>
         body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; line-height: 1.7; background-color: #fcfcfc; color: #333; }
-        
         .page-title-bar { background-color: #34495e; color: white; padding: 20px 0; text-align: center; }
         .page-title-bar h1 { margin: 0; font-size: 1.5rem; letter-spacing: 1px; }
-
         .main-nav { display: flex; justify-content: center; background-color: #ffffff; padding: 15px 0; border-bottom: 1px solid #eee; position: sticky; top: 0; z-index: 1000; }
         .nav-button { margin: 0 15px; padding: 8px 15px; text-decoration: none; color: #2c3e50; font-weight: 600; text-transform: uppercase; font-size: 0.85rem; border-radius: 4px; transition: 0.3s; }
         .nav-button:hover { background-color: #3498db; color: white; }
         .active-nav { background-color: #3498db; color: white; }
-
         .container { max-width: 850px; margin: 40px auto; padding: 0 20px; }
         .research-card { background: white; padding: 35px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); margin-bottom: 30px; }
         h2 { color: #2c3e50; border-bottom: 2px solid #3498db; padding-bottom: 10px; margin-top: 0; font-size: 1.6rem; }
-
         .year-header { font-size: 1.2rem; color: #3498db; font-weight: bold; margin: 30px 0 15px 0; border-left: 4px solid #3498db; padding-left: 10px; }
         .pub-item { margin-bottom: 25px; padding-bottom: 15px; border-bottom: 1px dashed #eee; }
         .pub-item:last-child { border-bottom: none; }
@@ -40,7 +36,6 @@
         .pub-links { margin-top: 8px; }
         .pub-links a { font-size: 0.8rem; color: #3498db; text-decoration: none; margin-right: 10px; border: 1px solid #3498db; padding: 2px 10px; border-radius: 3px; transition: 0.2s; }
         .pub-links a:hover { background: #3498db; color: white; }
-
         footer { text-align: center; padding: 40px; color: #7f8c8d; font-size: 0.9rem; }
     </style>
 </head>
@@ -58,9 +53,8 @@
 </nav>
 
 <div class="container">
-
     <div class="research-card">
-        <h2>Selected Publications</h2>
+        <h2>List of Publications</h2>
 
         <div class="year-header">2026 (Working Paper)</div>
         <div class="pub-item">
@@ -73,7 +67,7 @@
         <div class="pub-item">
             <span class="pub-title">The cogrowth inequality from Whitehead’s algorithm</span>
             <span class="pub-authors">Asif Shaikh</span>
-            <span class="pub-journal">Groups Geom. Dyn. (2025), published online first</span>
+            <span class="pub-journal">Groups, Geometry, and Dynamics (GGD), 2025</span>
             <div class="pub-links">
                 <a href="https://doi.org/10.4171/GGD/948" target="_blank">DOI: 10.4171/GGD/948</a>
             </div>
@@ -82,4 +76,45 @@
         <div class="pub-item">
             <span class="pub-title">Multivariate growth and cogrowth</span>
             <span class="pub-authors">Rostislav Grigorchuk, Jean-Francois Quint and Asif Shaikh</span>
-            <span class="pub-journal">Carpathian Math. Publ.,
+            <span class="pub-journal">Carpathian Mathematical Publications, 17(1), 82-109, 2025.</span>
+            <div class="pub-links">
+                <a href="https://doi.org/10.15330/cmp.17.1.82-109" target="_blank">DOI Link</a>
+            </div>
+        </div>
+
+        <div class="year-header">2021</div>
+        <div class="pub-item">
+            <span class="pub-title">Finitely generated subgroups of free group as formal languages and their cogrowth</span>
+            <span class="pub-authors">Arman Darbinyan, Rostislav Grigorchuk and Asif Shaikh</span>
+            <span class="pub-journal">Journal of Groups, Complexity, Cryptology, 13(2), 1-30, 2021.</span>
+            <div class="pub-links">
+                <a href="https://doi.org/10.46298/jgcc.2021.13.2.7617" target="_blank">DOI Link</a>
+            </div>
+        </div>
+
+        <div class="year-header">2018</div>
+        <div class="pub-item">
+            <span class="pub-title">Galois coverings of Schreier graphs</span>
+            <span class="pub-authors">Asif Shaikh</span>
+            <span class="pub-journal">PhD Thesis, Savitribai Phule Pune University</span>
+        </div>
+
+        <div class="year-header">2017</div>
+        <div class="pub-item">
+            <span class="pub-title">Zeta functions of finite Schreier graphs and their zig-zag products</span>
+            <span class="pub-authors">Asif Shaikh and Hemant Bhate</span>
+            <span class="pub-journal">Journal of Algebra and its Applications, 16(8), 1750151, 2017.</span>
+            <div class="pub-links">
+                <a href="https://doi.org/10.1142/S0219498817501511" target="_blank">DOI Link</a>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<footer>
+    &copy; 2026 Asif Shaikh | Frankfurt am Main
+</footer>
+
+</body>
+</html>
