--- a/publications.html
+++ b/publications.html
@@ -95,7 +95,7 @@
         <div class="year-header">2018</div>
         <div class="pub-item">
             <span class="pub-title">Galois coverings of Schreier graphs</span>
-            <span class="pub-authors">Asif Shaikh</span>
+            <span class="pub-authors">Asif Shaikh (Advisor: Prof. Hemant Bhate, Prof. Dilip Sheth)</span>
             <span class="pub-journal">PhD Thesis, Savitribai Phule Pune University</span>
         </div>
 
@@ -106,6 +106,15 @@
             <span class="pub-journal">Journal of Algebra and its Applications, 16(8), 1750151, 2017.</span>
             <div class="pub-links">
                 <a href="https://doi.org/10.1142/S0219498817501511" target="_blank">DOI Link</a>
+            </div>
+        </div>
+
+        <div class="year-header">2013</div>
+        <div class="pub-item">
+            <span class="pub-title">Group theoretical analysis of vibrational spectrum of buckyball</span>
+            <span class="pub-authors">Asif Shaikh (Advisor: Prof. Hemant Bhate, Prof. Dilip Sheth)</span>
+            <span class="pub-journal">M.Phil. Dissertation, Savitribai Phule Pune University</span>
+            <div class="pub-links">
             </div>
         </div>
 
