--- a/teaching.html
+++ b/teaching.html
@@ -73,7 +73,7 @@
         </ul>
         <div class="course-item">
             <span class="course-title">Visiting Faculty</span><br>
-            <span class="institution">S P College, & Savitribai phule Pune University, Pune, India </span>
+            <span class="institution">S P College, & Savitribai Phule Pune University, Pune, India </span>
             <p>I served as a Visiting Faculty where I was responsible for delivering core mathematical subjects to students specializing in Mathematics. </p>
         </div>
 
