--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
     <a href="research.html" class="nav-button">Research</a>
     <a href="publications.html" class="nav-button">Publications</a>
     <a href="teaching.html" class="nav-button">Teaching</a>
+    <a href="interests.html" class="nav-button">Beyond Math</a>
     </nav>
 <header>
     <div class="header-text">
