--- a/publications.html
+++ b/publications.html
@@ -50,6 +50,7 @@
     <a href="research.html" class="nav-button">Research</a>
     <a href="publications.html" class="nav-button active-nav">Publications</a>
     <a href="teaching.html" class="nav-button">Teaching</a>
+    <a href="interests.html" class="nav-button">Beyond Math</a>
 </nav>
 
 <div class="container">
