--- a/research.html
+++ b/research.html
@@ -73,6 +73,7 @@
     <a href="research.html" class="nav-button active-nav">Research</a>
     <a href="publications.html" class="nav-button">Publications</a>
     <a href="teaching.html" class="nav-button">Teaching</a>
+    <a href="interests.html" class="nav-button">Beyond Math</a>
 </nav>
 
 <div class="container">
