--- a/teaching.html
+++ b/teaching.html
@@ -47,6 +47,7 @@
     <a href="research.html" class="nav-button">Research</a>
     <a href="publications.html" class="nav-button">Publications</a>
     <a href="teaching.html" class="nav-button active-nav">Teaching</a>
+    <a href="interests.html" class="nav-button">Beyond Math</a>
 </nav>
 
 <div class="container">
