--- a/interests.html
+++ b/interests.html
@@ -32,7 +32,7 @@
     <a href="research.html" class="nav-button">Research</a>
     <a href="publications.html" class="nav-button">Publications</a>
     <a href="teaching.html" class="nav-button">Teaching</a>
-    <a href="interests.html" class="nav-button active-nav">Interests</a>
+    <a href="interests.html" class="nav-button">Beyond Math</a>
 </nav>
 
 <div class="container">
