--- a/interests.html
+++ b/interests.html
@@ -37,14 +37,17 @@
 
 <div class="container">
     <div class="interest-card">
-        <h2>Marathi Literature & Philosophy</h2>
-        <p>My worldview is deeply shaped by the humanist traditions of Marathi literature. I find profound inspiration in the legacy of <strong>Baba Amte</strong> and his family, as chronicled in works like <em>Samidha, Prakashvata,</em> and <em>Anandwan Prayogwan</em>. Their philosophy—transforming social stigma into a "Forest of Bliss"—serves as a practical proof of how compassion and structure can solve the most complex human hardships.</p>
+    <h2>The Tradition of Humanism</h2>
+    
+    <p>My worldview is rooted in the rich ethical and social traditions of <strong>Maharashtra</strong>. This lineage begins with the egalitarian spiritualism of <strong>Sant Dnyaneshwar</strong> and <strong>Sant Tukaram</strong>, and finds its political and social backbone in the visionary leadership of <strong>Chhatrapati Shivaji Maharaj</strong>. My perspective is further defined by the revolutionary reforms of <strong>Mahatma Phule, Rajarshi Shahu Maharaj,</strong> and <strong>Dr. B.R. Ambedkar</strong>, whose collective work dismantled barriers and championed human dignity.</p>
 
-        <div class="quote-box">
-            "While mathematics defines the logical structure of the universe, literature defines the soul. I find a shared honesty in the rebellious verses of Namdev Dhasal and the lyrical depth of Kusumagraj."
-        </div>
+    <p>I find a modern continuation of this great tradition in the legacy of <strong>Baba Amte</strong> and his family. As chronicled in works like <em>Samidha, Prakashvata,</em> and <em>Anandwan Prayogwan</em>, their philosophy of transforming social stigma into a "Forest of Bliss" (Anandwan) serves as a practical proof of how compassion and rigorous structure can solve the most complex human hardships.</p>
 
-        <p>Recently, I have enjoyed exploring cross-cultural narratives, such as P.L. Deshpande’s <em>Jave Tyanchya Desha</em> and Banu Mushtaq’s <em>Heart Lamp</em>.</p>
+    <div class="quote-box">
+        "To me, the evolution from the verses of the Bhakti saints to the social justice of Ambedkar and the 'labor of love' at Anandwan represents a single, unbroken quest for a more equitable world."
+    </div>
+</div>
+            <p>Recently, I have enjoyed exploring cross-cultural narratives, such as P.L. Deshpande’s <em>Jave Tyanchya Desha</em> and Banu Mushtaq’s <em>Heart Lamp</em>.</p>
         
         <h3>Literary Influences</h3>
         <div class="book-list">
