--- a/research.html
+++ b/research.html
@@ -29,6 +29,10 @@
         }
         .page-title-bar h1 { margin: 0; font-size: 1.5rem; letter-spacing: 1px; }
 
+        <div class="page-title-bar">
+       <h1>Asif Shaikh — Research</h1>
+        </div>
+
         /* Navigation */
         .main-nav { 
             display: flex; 
