--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@
         .page-title-bar {
             background-color: #34495e;
             color: white;
-            padding:  0;
+            padding:  20px 0;
             text-align: center;
         }
         .page-title-bar h1 { margin: 0; font-size: 1.5rem; letter-spacing: 1px; }
