--- a/research.html
+++ b/research.html
@@ -17,6 +17,20 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/dist/tex-mml-chtml.js"></script>
 
     <style>
+        /* Mobile Optimization for Navigation */
+@media (max-width: 600px) {
+    .main-nav {
+        flex-wrap: wrap; /* Allows buttons to move to a second line */
+        padding: 10px;
+    }
+    .nav-button {
+        margin: 5px; /* Adds space between stacked buttons */
+        padding: 10px 12px;
+        font-size: 0.75rem; /* Slightly smaller text for mobile */
+        flex: 1 1 40%; /* Makes buttons take up roughly half the width */
+        text-align: center;
+    }
+}
         body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; line-height: 1.7; background-color: #fcfcfc; color: #333; }
         
         /* Minimalist Title Bar */
