--- a/index.html
+++ b/index.html
@@ -265,4 +265,14 @@
     </footer>
 
 </body>
+    <footer>
+    <p>&copy; 2026 Asif Shaikh | Frankfurt am Main</p>
+    <p>
+        <a href="https://orcid.org/0000-0002-3440-9619" target="_blank" style="text-decoration: none; color: #7f8c8d;">
+            <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID logo" style="vertical-align: middle; margin-right: 5px;">
+            https://orcid.org/0000-0002-3440-9619
+        </a>
+    </p>
+</footer>
 </html>
+
