--- a/publications.html
+++ b/publications.html
@@ -56,7 +56,11 @@
 <body>
 
 <div class="page-title-bar">
-    <h1>Asif Shaikh — Publications</h1>
+    <h1>Asif Shaikh — Publications
+    <a href="https://orcid.org/0000-0002-3440-9619" target="_blank" title="View ORCID Profile" style="text-decoration: none; margin-left: 10px;">
+            <img src="https://orcid.org/sites/default/files/images/orcid_24x24.png" alt="ORCID iD" style="vertical-align: middle; filter: brightness(0) invert(1);">
+        </a>
+    </h1>
 </div>
 
 <nav class="main-nav">
