--- a/publications.html
+++ b/publications.html
@@ -57,8 +57,10 @@
 
 <div class="page-title-bar">
     <h1>Asif Shaikh — Publications
-    <a href="https://orcid.org/0000-0002-3440-9619" target="_blank" title="View ORCID Profile" style="text-decoration: none; margin-left: 10px;">
-            <img src="https://orcid.org/sites/default/files/images/orcid_24x24.png" alt="ORCID iD" style="vertical-align: middle; filter: brightness(0) invert(1);">
+   <a href="https://orcid.org/0000-0002-3440-9619" target="_blank" title="View ORCID Profile" style="text-decoration: none; margin-left: 10px;">
+            <img src="https://orcid.org/sites/default/files/images/orcid_24x24.png" 
+                 alt="ORCID iD" 
+                 style="vertical-align: middle; width: 24px; height: 24px;">
         </a>
     </h1>
 </div>
