--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <footer>
         <p>
             Based in Frankfurt am Main, Germany | 
-            <a href="s.asif.shaikh@fulbrightmail.org">Email Me</a> | 
+            <a href="mailto:asif.shaikh@fulbrightmail.org">Email Me</a> | 
             <a href="https://github.com/asifmath">GitHub</a>
         <a href="https://orcid.org/0000-0002-3440-9619" target="_blank" style="text-decoration: none; color: #7f8c8d;">
             <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID logo" style="vertical-align: middle; margin-right: 5px;">
