--- a/index.html
+++ b/index.html
@@ -244,6 +244,11 @@
                 academic and research opportunities within the European mathematical community, where I can contribute 
                 my expertise in group theory, teaching, and interdisciplinary modeling.
             </p>
+            <p>
+                <strong> Email: </strong> asif.shaikh@fulbrightmail.org, s.asifbhai@gmail.com 
+                
+            </p>
+
         </div>
 
         <h3>Beyond the Chalkboard</h3>
