--- a/interests.html
+++ b/interests.html
@@ -70,10 +70,17 @@
         <p>I have a particular love for listening to <strong>Abhangas</strong> and <strong>Ghazals</strong>, finding in them a soul-stirring blend of poetry and melody. Currently, my favorite singer is <strong>Rahul Deshpande</strong>, whose artistry beautifully bridges the classical and contemporary traditions.</p>
     </div>
 </div>
-
 <footer>
-    &copy; 2026 Asif Shaikh | Frankfurt am Main
-</footer>
+        <p>
+            Based in Frankfurt am Main, Germany | 
+            <a href="mailto:asif.shaikh@fulbrightmail.org">Email Me</a> | 
+            <a href="https://github.com/asifmath">GitHub</a>
+        <a href="https://orcid.org/0000-0002-3440-9619" target="_blank" style="text-decoration: none; color: #7f8c8d;">
+            <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID logo" style="vertical-align: middle; margin-right: 5px;">
+            https://orcid.org/0000-0002-3440-9619
+        </a>
+        </p>
+    </footer>
 
 </body>
 </html>
