--- a/teaching.html
+++ b/teaching.html
@@ -119,7 +119,7 @@
 
 <footer>
         <p>
-            Based in Frankfurt am Main, Germany | 
+            Frankfurt am Main, Germany | 
             <a href="mailto:asif.shaikh@fulbrightmail.org">Email Me</a> | 
             <a href="https://github.com/asifmath">GitHub</a>
         <a href="https://orcid.org/0000-0002-3440-9619" target="_blank" style="text-decoration: none; color: #7f8c8d;">
