--- a/teaching.html
+++ b/teaching.html
@@ -84,7 +84,8 @@
                 <li>Mathematics & Statistical Techniques</li>
                 <li>Operations Research</li>
                 <li>Programming: C, Python, R</li>
-                <li>Data Analysis (Excel & SQL)</li>
+                <li>Data Analysis: Excel </li>
+                <li>Database Manegment: SQL </li>
             </ul>
         </div>
 
