--- a/teaching.html
+++ b/teaching.html
@@ -77,7 +77,8 @@
         <div class="course-item">
             <span class="course-title">Assistant Professor of Mathematics</span><br>
             <span class="institution">R A Podar College of Commerce and Economics, Mumbai, India</span>
-            <p>I served as an Assistant Professor where I was responsible for delivering core mathematical curricula to students specializing in Finance and Economics. My role involved adapting complex mathematical theories into accessible tools for economic modeling and financial analysis.</p>
+            <p>I served as an Assistant Professor where I was responsible for delivering core mathematical curricula to students specializing in Finance and Economics. 
+                My role involved adapting complex mathematical theories into accessible tools for economic modeling and financial analysis.</p>
             
             <strong>Key Courses:</strong>
             <ul>
