--- a/research.html
+++ b/research.html
@@ -122,7 +122,7 @@
 
     <div class="research-card">
         <h2>Structural Complexity vs. Quantitative Growth</h2>
-        <p>A central pillar of my research is connecting Whitehead’s classical theory with the quantitative measure of <strong>cogrowth</strong> of $H$.</p>
+        <p>A central pillar of my research is the connection between Whitehead’s classical theory and the quantitative measure of <strong>cogrowth</strong> of $H$ introduced by Grigorchuk.</p>
         
         <p>While Whitehead moves allow us to detect and reduce the geometric complexity of a generating system, the cogrowth records the exponential growth rate of reduced words representing elements of $H$. My current motivation is to clarify whether structural simplifications systematically affect this quantitative growth.</p>
         
